# ccusage

./: flake.nix  package.json
.github/: APPROVED_CONTRIBUTORS
.github/workflows/: ci.yaml  update-pricing.yaml
apps/ccusage/: README.md  package.json
apps/ccusage/scripts/: compare-pr-performance.ts
docs/: package.json
rust/crates/ccusage/: Cargo.toml
rust/crates/ccusage-terminal/: Cargo.toml
