[package]
name = "ccusage"
version = "20.0.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ccusage"
path = "src/main.rs"

[[bin]]
name = "generate-config-schema"
path = "src/bin/generate_config_schema.rs"

[dependencies]
ccusage-terminal = { path = "../ccusage-terminal" }
jiff = { version = "0.2.24", default-features = false, features = [
	"std",
	"tz-system",
	"tzdb-zoneinfo",
] }
memchr = "2"
compact_str = "0.9"
phf = { version = "0.13", features = ["macros"] }
rustc-hash = "2"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"
sqlite = { version = "0.37.0", default-features = false, features = ["bundled", "linkage"] }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"] }

[build-dependencies]
minreq = { version = "3.0.0-rc.1", default-features = false, features = ["https-rustls"] }
serde_json = "1"

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
mimalloc = "0.1.50"
